Ajustes para funcionar o login
