# openapi.json
@@ -28,6 +28,24 @@
         ]
       }
     },
+    "/api/v1/auth/setup": {
+      "post": {
+        "operationId": "AuthController_setup",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "Usuário inicial criado com sucesso"
+          },
+          "400": {
+            "description": "Já existe usuário cadastrado no sistema"
+          }
+        },
+        "summary": "Criar usuário inicial - diegosoek@gmail.com",
+        "tags": [
+          "auth"
+        ]
+      }
+    },
     "/api/v1/auth/login": {
       "post": {
         "operationId": "AuthController_login",
